gpu benchmarks and documentation edits

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,30 @@ gpu = ["wgpu", "bytemuck", "pollster"]
 [[bench]]
 name = "spawn"
 harness = false
+
+[[bench]]
+name = "iterate"
+harness = false
+
+[[bench]]
+name = "tick"
+harness = false
+
+[[bench]]
+name = "reduce"
+harness = false
+
+[[bench]]
+name = "gpu_startup"
+harness = false
+required-features = ["gpu"]
+
+[[bench]]
+name = "gpu_dispatch"
+harness = false
+required-features = ["gpu"]
+
+[[bench]]
+name = "gpu_tick"
+harness = false
+required-features = ["gpu"]
